Fixed body height and main container align

--- a/client/src/styles/globals.scss
+++ b/client/src/styles/globals.scss
@@ -3,68 +3,73 @@
 
 html,
 body {
-    scroll-behavior: smooth;
-    font-family: "Montserrat", sans-serif;
+  scroll-behavior: smooth;
+  font-family: "Montserrat", sans-serif;
 }
 
 html {
-    font-size: 10px;
+  font-size: 10px;
 }
 
 body {
-    background: url(/bg.png) center no-repeat;
-    background-size: cover;
-    height: 100vh;
+  background: url(/bg.png) center no-repeat;
+  background-size: cover;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  @media screen and (max-height: 901px) {
+    height: unset;
+  }
 }
 
 *,
 *::after,
 *::before {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
 
 /* Container properties */
 .main {
-    width: 100%;
-    max-width: 140rem;
-    height: 100%;
-    max-height: 90rem;
+  position: relative;
+  width: 100vw;
+  max-width: 140rem;
+  min-height: 911px;
 
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    z-index: 1;
-    transform: translate(-50%, -50%);
+  background-color: #fff;
+  box-shadow: 0 0 10px rgba(#000, 0.5);
 
-    background-color: #fff;
-    box-shadow: 0 0 10px rgba(#000, 0.5);
+  &.--small {
+    max-width: 50rem;
+    border-radius: 1rem;
+    height: unset;
+  }
 
-    &.--small {
-        max-width: 50rem;
-        border-radius: 1rem;
-        height: unset;
-    }
-
-    &.--padding {
-        padding: 4rem 2rem;
-    }
+  &.--padding {
+    padding: 4rem 2rem;
+  }
 }
 
 .container {
-    padding-left: $leftbar-width;
-    height: 100%;
+  padding-left: $leftbar-width;
+  height: 100%;
+
+  @media screen and (max-width: 767px) {
+    padding-left: 50px;
+  }
 }
 
 /* Misc */
 .arrow {
-    width: 8px;
-    height: 8px;
-    border-left: 1px solid;
-    border-bottom: 1px solid;
-    border-color: #d5daea;
-    transform: rotate(-45deg) translateY(-50%);
+  width: 8px;
+  height: 8px;
+  border-left: 1px solid;
+  border-bottom: 1px solid;
+  border-color: #d5daea;
+  transform: rotate(-45deg) translateY(-50%);
 }
 
 @import "./buttons";
